# fcgiq

./: .gitignore  Cargo.toml  LICENSE  README.md  build  compose.yaml  test
src/: cli.rs  config.rs  item.rs  main.rs  pool.rs  queue.rs  runner.rs
test-assets/: config.yaml  queue-task.sh
test-assets/elasticmq/: elasticmq.conf  logback.xml
test-assets/php/: test.php
